--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QGridLayout" >
@@ -281,9 +281,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -435,125 +435,119 @@ p, li { white-space: pre-wrap; }
           <attribute name="icon" >
            <iconset resource="qtpacman.qrc" >:/Icons/icons/archlinux-icon-crystal-32.svg</iconset>
           </attribute>
-          <widget class="QWidget" name="" >
-           <property name="geometry" >
-            <rect>
-             <x>4</x>
-             <y>25</y>
-             <width>661</width>
-             <height>451</height>
-            </rect>
-           </property>
-           <layout class="QVBoxLayout" >
-            <item>
-             <layout class="QVBoxLayout" >
-              <item>
-               <layout class="QHBoxLayout" >
-                <item>
-                 <widget class="QLabel" name="label_18" >
-                  <property name="text" >
-                   <string/>
-                  </property>
-                  <property name="pixmap" >
-                   <pixmap resource="qtpacman.qrc" >:/Icons/icons/archlinux-icon-crystal-32.svg</pixmap>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="officialLabel" >
-                  <property name="text" >
-                   <string>Here you can choose what repositories to use between Arch Linux's official ones.
-Please note that packages from Unstable and Testing may break your system.</string>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="coreBox" >
-                <property name="text" >
-                 <string comment="Do not translate" >Core</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="extraBox" >
-                <property name="text" >
-                 <string comment="Do not translate" >Extra</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="communityBox" >
-                <property name="text" >
-                 <string comment="Do not translate" >Community</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="testingBox" >
-                <property name="text" >
-                 <string comment="Do not translate" >Testing</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="unstableBox" >
-                <property name="text" >
-                 <string comment="Do not translate" >Unstable</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <spacer>
-                <property name="orientation" >
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" >
-                 <size>
-                  <width>20</width>
-                  <height>40</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QGroupBox" name="groupBox_4" >
-              <property name="title" >
-               <string>Server</string>
-              </property>
-              <layout class="QGridLayout" >
-               <item row="0" column="0" >
-                <widget class="QLabel" name="mirrorLabel" >
-                 <property name="text" >
-                  <string>Mirror:</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="1" >
-                <widget class="QComboBox" name="mirrorBox" />
-               </item>
-               <item row="2" column="1" >
+          <layout class="QGridLayout" >
+           <item row="0" column="0" >
+            <layout class="QVBoxLayout" >
+             <item>
+              <layout class="QVBoxLayout" >
+               <item>
                 <layout class="QHBoxLayout" >
                  <item>
-                  <widget class="QLineEdit" name="addMirrorLine" />
+                  <widget class="QLabel" name="label_18" >
+                   <property name="text" >
+                    <string/>
+                   </property>
+                   <property name="pixmap" >
+                    <pixmap resource="qtpacman.qrc" >:/Icons/icons/archlinux-icon-crystal-32.svg</pixmap>
+                   </property>
+                  </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="addMirrorButton" >
+                  <widget class="QLabel" name="officialLabel" >
                    <property name="text" >
-                    <string>Add Mirror</string>
+                    <string>Here you can choose what repositories to use between Arch Linux's official ones.
+Please note that packages from Unstable and Testing may break your system.</string>
                    </property>
                   </widget>
                  </item>
                 </layout>
                </item>
+               <item>
+                <widget class="QCheckBox" name="coreBox" >
+                 <property name="text" >
+                  <string comment="Do not translate" >Core</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="extraBox" >
+                 <property name="text" >
+                  <string comment="Do not translate" >Extra</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="communityBox" >
+                 <property name="text" >
+                  <string comment="Do not translate" >Community</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="testingBox" >
+                 <property name="text" >
+                  <string comment="Do not translate" >Testing</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="unstableBox" >
+                 <property name="text" >
+                  <string comment="Do not translate" >Unstable</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer>
+                 <property name="orientation" >
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" >
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
               </layout>
-             </widget>
-            </item>
-           </layout>
-          </widget>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox_4" >
+               <property name="title" >
+                <string>Server</string>
+               </property>
+               <layout class="QGridLayout" >
+                <item row="0" column="0" >
+                 <widget class="QLabel" name="mirrorLabel" >
+                  <property name="text" >
+                   <string>Mirror:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1" >
+                 <widget class="QComboBox" name="mirrorBox" />
+                </item>
+                <item row="2" column="1" >
+                 <layout class="QHBoxLayout" >
+                  <item>
+                   <widget class="QLineEdit" name="addMirrorLine" />
+                  </item>
+                  <item>
+                   <widget class="QPushButton" name="addMirrorButton" >
+                    <property name="text" >
+                     <string>Add Mirror</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </widget>
          <widget class="QWidget" name="KDEModTab" >
           <attribute name="title" >
@@ -562,7 +556,7 @@ Please note that packages from Unstable and Testing may break your system.</stri
           <attribute name="icon" >
            <iconset resource="qtpacman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</iconset>
           </attribute>
-          <widget class="QWidget" name="" >
+          <widget class="QWidget" name="layoutWidget" >
            <property name="geometry" >
             <rect>
              <x>5</x>
